fixed layout issues

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+  margin-right: 25%;
 
   div {
     width: 30%;
